test/tests/errors/error-operation.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 1 + "test";
}